loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: not found: value t
if (isFacingWall){t=True}  
                  ^LoopWhile:2: error: not found: value t
  else{while (t!=True){forward()}} 
              ^LoopWhile:2: error: not found: value True
  else{while (t!=True){forward()}} 
                 ^