loopwhile.LoopWhile.scala.code
if (isFacingWall){t=True}	
	else{while (t!=True){forward()}}